cncProd/force-app/main/default/objects/Customer_Detail__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Customer Details</relationshipLabel>
    <relationshipName>Customer_Details</relationshipName>
    <type>Lookup</type>
</CustomField>